--- a/assets/main.scss
+++ b/assets/main.scss
@@ -3,8 +3,10 @@
 ---
 @charset "utf-8";
 
+@import url('https://fonts.googleapis.com/css?family=Lora|Ubuntu:400,700');
+
 // Our variables
-$base-font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+$base-font-family: "Ubuntu", Helvetica, Arial, sans-serif;
 $base-font-size:   16px;
 $base-font-weight: 400;
 $small-font-size:  $base-font-size * 0.875;
@@ -35,5 +37,5 @@ $on-laptop:        800px;
 //     }
 // }
 
-// Import partials from the `minima` theme.
-@import "minima";
+// Import partials from the `freshbrewed` theme.
+@import "freshbrewed";
