--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
 
     {% include header.html %}
 
-    <main class="page-content" aria-label="Content">
+    <main class="site-content" aria-label="Content">
       <div class="wrapper">
         {{ content }}
       </div>
