--- a/assets/main.scss
+++ b/assets/main.scss
@@ -5,8 +5,12 @@
 
 @import url('https://fonts.googleapis.com/css?family=Lora|Ubuntu:400,700');
 
-// Our variables
+$brand-primary:    #CB7947;
+$brand-dark:       #362A26;
+$brand-light:      #E2E0D7;
+
 $base-font-family: "Ubuntu", Helvetica, Arial, sans-serif;
+$serif-font-family: "Lora", Georgia, "Times New Roman", serif;
 $base-font-size:   16px;
 $base-font-weight: 400;
 $small-font-size:  $base-font-size * 0.875;
@@ -27,15 +31,6 @@ $content-width:    800px;
 
 $on-palm:          600px;
 $on-laptop:        800px;
-
-// Minima also includes a mixin for defining media queries.
-// Use media queries like this:
-// @include media-query($on-palm) {
-//     .wrapper {
-//         padding-right: $spacing-unit / 2;
-//         padding-left: $spacing-unit / 2;
-//     }
-// }
 
 // Import partials from the `freshbrewed` theme.
 @import "freshbrewed";
