--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,11 @@
-<header class="site-header site-header--is-open" role="banner">
+<header class="site-header" role="banner">
 
     <button class="site-header__toggler">
         <i class="fa fa-window-close"></i>
+        <span>
+            {% include icon.html %}
+            <i class="fa fa-bars"></i>
+        </span>
     </button>
 
     <div class="site-brand">
