--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <header class="site-header" role="banner">
 
-    <button class="site-header__toggler">
+    <button id="menuToggle" class="site-header__toggler">
         <i class="fa fa-window-close"></i>
         <span>
             {% include icon.html %}
