--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,2 +1,2 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<script scr="{{ "/assets/main.js" }}"></script>
+<script src="{{ "/assets/main.js" | relative_url }}"></script>
