--- a/_sass/freshbrewed/_layout.scss
+++ b/_sass/freshbrewed/_layout.scss
@@ -1,3 +1,7 @@
+* {
+    transition: all ease-in-out 200ms;
+}
+
 body {
     font-size: 14px;
     @media( min-width: $on-palm ) {
@@ -24,6 +28,9 @@ body {
     }
 
     &__toggler {
+        @media( min-width: $on-palm ) {
+            display: none;
+        }
         padding: 5px;
         border-radius: 0 4px 4px 0;
         box-shadow: 3px 2px 5px rgba(0,0,0,0.5);
@@ -38,6 +45,7 @@ body {
         left: 100%;
         color: $brand-light;
         cursor: pointer;
+        outline: none;
         &:hover {
             color: $brand-primary;
         }
@@ -46,9 +54,14 @@ body {
             display: none;
         }
         span {
+            padding: 4px 8px;
             display: flex;
             flex-direction: row;
-            align-items: middle;
+            align-items: center;
+
+            svg {
+                margin-right: 1em;
+            }
         }
     }
 
@@ -101,7 +114,7 @@ body {
 }
 
 .site-content {
-    padding: $spacing-unit;
+    padding: $spacing-unit * 2;
     max-width: 700px;
 
     p {
