--- a/_includes/header.html
+++ b/_includes/header.html
@@ -14,7 +14,7 @@
         </a>
 
         <p><a href="https://calendly.com/freshbrewedweb"><i class="fa fa-phone-square"></i> Schedule a Call</a></p>
-        <p><a href="https://calendly.com/freshbrewedweb"><i class="fa fa-envelope"></i> info@freshbrewedweb.com</a></p>
+        <p><a href="mailto:info@freshbrewedweb.com"><i class="fa fa-envelope"></i> info@freshbrewedweb.com</a></p>
     </div>
 
     <nav class="site-nav">
