data powered menu

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -17,15 +17,6 @@
         <p><a href="mailto:info@freshbrewedweb.com"><i class="fa fa-envelope"></i> info@freshbrewedweb.com</a></p>
     </div>
 
-    <nav class="site-nav">
-      <div class="trigger">
-        {% assign sorted_pages = site.pages | sort:"order" %}
-        {% for my_page in sorted_pages %}
-          {% if my_page.title %}
-          <a class="page-link" href="{{ my_page.url | relative_url }}">{{ my_page.title | escape }}</a>
-          {% endif %}
-        {% endfor %}
-      </div>
-    </nav>
+    {% include nav.html nav=site.data.menu %}
 
 </header>
