--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,2 +1,3 @@
+<script src="{{ "/assets/turbolinks.js" | relative_url }}"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="{{ "/assets/main.js" | relative_url }}"></script>
