Finished projects page

--- a/_sass/freshbrewed/_components.scss
+++ b/_sass/freshbrewed/_components.scss
@@ -6,6 +6,10 @@
     color: $brand-light;
     text-transform: uppercase;
 
+    &--sm {
+        font-size: 0.75em;
+    }
+
     &:hover {
         background-color: $brand-primary;
     }
@@ -19,5 +23,83 @@ ul.list-inline {
     li {
         display: inline-block;
         margin-right: 1em;
+    }
+}
+
+ul.list-projects {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+.project {
+    margin: 0;
+    position: relative;
+    color: $brand-dark;
+    display: flex;
+    flex-direction: row;
+    overflow: hidden;
+    border: 2px solid $brand-primary;
+    background-color: rgba($brand-primary, 0.05);
+
+    &:nth-child(2n+1) {
+        background-color: rgba($brand-primary, 0.15);
+    }
+
+    &:hover {
+        background-color: $brand-primary;
+        color: $brand-light;
+    }
+
+    border-bottom-width: 0;
+    &:first-child {
+        border-radius: 1em 1em 0 0;
+    }
+
+    &:last-child {
+        border-radius: 0 0 1em 1em;
+        border-bottom-width: 2px;
+    }
+
+    &__title {
+        @include font-size(16px);
+        text-transform: uppercase;
+        padding: $spacing-unit/2;
+        padding-bottom: 0;
+        margin: 0;
+    }
+
+    &__desc {
+        @include font-size();
+        margin: 0;
+        padding: $spacing-unit/2;
+    }
+
+    &__content {
+        width: 85%;
+    }
+
+    &__tags {
+        list-style: none;
+        margin: 0;
+        padding: 0;
+        height: 100%;
+        width: 15%;
+        margin-left: auto;
+
+        li {
+            background-color: rgba($brand-dark, 0.8);
+            font-weight: 300;
+            color: $brand-light;
+            font-size: 0.75em;
+            margin-top: 0;
+            margin-bottom: 2px;
+            padding: 4px;
+            text-align: right;
+
+            &:last-child {
+                border-bottom-left-radius: 3px;
+            }
+        }
     }
 }
