--- a/_sass/freshbrewed/_base.scss
+++ b/_sass/freshbrewed/_base.scss
@@ -33,6 +33,11 @@ h1 {
     margin-top: 0;
 }
 
+h2 {
+    @include font-size(24px);
+    font-weight: 300;
+}
+
 h3 {
     @include font-size(18px);
     text-transform: uppercase;
@@ -47,4 +52,9 @@ ul {
 
 li {
     margin: $spacing-unit/2 0;
+}
+
+strong {
+    font-family: $base-font-family;
+    font-weight: 700;
 }
