Added bg video to header

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -19,4 +19,11 @@
 
     {% include nav.html nav=site.data.menu %}
 
+    <div class="site-header__video">
+        <video playsinline autoplay muted loop poster="assets/coffee-steaming.jpg" id="coffee-steam">
+            <source src="assets/coffee-steaming.webm" type="video/webm">
+            <source src="assets/coffee-steaming.mp4" type="video/mp4">
+        </video>
+    </div>
+
 </header>
