--- a/_sass/freshbrewed/_layout.scss
+++ b/_sass/freshbrewed/_layout.scss
@@ -9,6 +9,8 @@ body {
 }
 
 .site-header {
+    display: flex;
+    flex-direction: column;
     position: fixed;
     z-index: 999;
     top: 0;
@@ -63,6 +65,29 @@ body {
             svg {
                 margin-right: 1em;
             }
+        }
+    }
+
+    &__video {
+        margin-top: auto;
+        overflow: hidden;
+        position: relative;
+        flex: 1;
+        video {
+            mix-blend-mode: multiply;
+            /* Make video to at least 100% wide and tall */
+            min-width: 100%;
+            min-height: 100%;
+
+            /* Setting width & height to auto prevents the browser from stretching or squishing the video */
+            width: auto;
+            height: auto;
+
+            /* Center the video */
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%,-50%);
         }
     }
 
