--- a/_includes/blog-feed.html
+++ b/_includes/blog-feed.html
@@ -1,13 +1,16 @@
-<ul class="post-list">
-  {% for post in site.posts %}
-    <li>
-      <span class="post-meta">{{ post.date | date: "%b %-d, %Y" }}</span>
-
-      <h2>
-        <a class="post-link" href="{{ post.url | relative_url }}">{{ post.title | escape }}</a>
-      </h2>
-    </li>
-  {% endfor %}
-</ul>
-
-<p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | relative_url }}">via RSS</a></p>
+<div class="list-posts">
+    {% for post in site.posts %}
+    <a href="{{ post.url | relative_url }}" class="list-post">
+        <div class="list-post__content">
+            <h2 class="list-post__title" >{{ post.title | escape }}</h2>
+            <p class="list-post__desc">{{ post.excerpt | remove: '<p>' | remove: '</p>' }}</p>
+        </div>
+        <ul class="list-post__tags">
+            <li class="post-meta">{{ post.date | date: "%b %-d, %Y" }}</li>
+            {% for tag in post.categories %}
+            <li>{{ tag }}</li>
+            {% endfor %}
+        </ul>
+    </a>
+    {% endfor %}
+</div>
