--- a/_includes/blog-feed.html
+++ b/_includes/blog-feed.html
@@ -1,3 +1,4 @@
+{% if site.posts > 0 %}
 <div class="list-posts">
     {% for post in site.posts %}
     <a href="{{ post.url | relative_url }}" class="list-post">
@@ -14,3 +15,6 @@
     </a>
     {% endfor %}
 </div>
+{% else %}
+<p>We're new at this, give us a break. We'll post something soon.</p>
+{% endif %}
