--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,7 +5,14 @@ layout: default
 
   <header class="post-header">
     <h1 class="post-title" itemprop="name headline">{{ page.title | escape }}</h1>
-    <p class="post-meta"><time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">{{ page.date | date: "%b %-d, %Y" }}</time>{% if page.author %} • <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span itemprop="name">{{ page.author }}</span></span>{% endif %}</p>
+    <ul class="post-meta">
+        <li><time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">{{ page.date | date: "%b %-d, %Y" }}</time></li>
+        {% if page.author %}
+        <li><span itemprop="author" itemscope itemtype="http://schema.org/Person"><span itemprop="name">{{ page.author }}</span></span>{% endif %}</li>
+        {% for category in page.categories %}
+        <li>{{ category }}</li>
+        {% endfor %}
+    </ul>
   </header>
 
   <div class="post-content" itemprop="articleBody">
