--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -19,6 +19,23 @@ layout: default
     {{ content }}
   </div>
 
+
+  <div class="post-nav">
+    <div class="post-nav-posts">
+        {% if page.next.url %}
+        <a class="button post-nav__next" href="{{page.next.url}}"><i class="fa fa-chevron-left"></i> {{page.next.title}}</a>
+        {% else %}
+        <a href="/blog/" class="button post-nav__next"><i class="fa fa-chevron-left"></i> Back to Blog</a>        
+        {% endif %}
+        {% if page.previous.url %}
+        <a class="button post-nav__prev" href="{{page.previous.url}}">{{page.previous.title}} <i class="fa fa-chevron-right"></i></a>
+        {% else %}
+        <a href="/blog/" class="button post-nav__prev">Back to Blog <i class="fa fa-chevron-right"></i></a>
+        {% endif %}
+    </div>
+  </div>
+
+
   {% if site.disqus.shortname %}
     {% include disqus_comments.html %}
   {% endif %}
