--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,8 +3,32 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>Fresh Brewed Web – {% if page.title %}{{ page.title | escape }}{% else %}{{ site.title | escape }}{% endif %}</title>
+<!--
+Curious about our code? This site was compiled with Jekyll and hosted on Github.
+Check out the repo here:
+https://github.com/freshbrewedweb/freshbrewedweb.github.io
 
+___________                     .__
+\_   _____/______   ____   _____|  |__
+ |    __) \_  __ \_/ __ \ /  ___/  |  \
+ |     \   |  | \/\  ___/ \___ \|   Y  \
+ \___  /   |__|    \___  >____  >___|  /
+     \/                \/     \/     \/
+__________                                  .___
+\______   \_______   ______  _  __ ____   __| _/
+ |    |  _/\_  __ \_/ __ \ \/ \/ // __ \ / __ |
+ |    |   \ |  | \/\  ___/\     /\  ___// /_/ |
+ |______  / |__|    \___  >\/\_/  \___  >____ |
+        \/              \/            \/     \/
+ __      __      ___.
+/  \    /  \ ____\_ |__
+\   \/\/   // __ \| __ \
+ \        /\  ___/| \_\ \
+  \__/\  /  \___  >___  /
+       \/       \/    \/                         
+-->
+
+  <title>Fresh Brewed Web – {% if page.title %}{{ page.title | escape }}{% else %}{{ site.title | escape }}{% endif %}</title>
   <meta name="description" content="{{ page.description | default: page.excerpt | strip_html | normalize_whitespace | truncate: 160 | escape }}">
 
   {% include social-graph.html %}
