Filtering on projects

--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -1,6 +1,14 @@
-<div class="list-posts">
+{% assign collection_tags =  site.projects | map: 'tags' | join: ','  | split: ',' | uniq | sort %}
+<div class="button-group filter-button-group">
+    <a class="button active" data-filter="*">All</a>
+	{% for tag in collection_tags %}
+	<a class="button" data-filter=".{{ tag }}">{{ tag }}</a>
+	{% endfor %}
+</div>
+
+<div class="grid list-posts">
     {% for item in site.projects %}
-    <a class="list-post" href="{% if item.external %}{{ item.external }}{% else %}{{ item.url }}{% endif %}">
+    <a class="element-item list-post {{ item.tags | join ' ' }}" href="{% if item.external %}{{ item.external }}{% else %}{{ item.url }}{% endif %}">
         <div class="list-post__content">
             <h2 class="list-post__title" >{{ item.title }}</h2>
             <p class="list-post__desc">{{ item.description }}</p>
