--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,10 @@
-<script src="{{ "/assets/turbolinks.js" | relative_url }}"></script>
+<script src="{{ "/assets/javascripts/turbolinks.js" | relative_url }}"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<script src="{{ "/assets/main.js" | relative_url }}"></script>
+
+{% if page.custom_js %}
+  {% for js_file in page.custom_js %}
+  <script src='/assets/javascripts/{{ js_file }}.js' type="text/javascript"></script>
+  {% endfor %}
+{% endif %}
+
+<script src="{{ "/assets/javascripts/main.js" | relative_url }}"></script>
