--- a/_sass/freshbrewed/_components.scss
+++ b/_sass/freshbrewed/_components.scss
@@ -26,10 +26,13 @@ ul.list-inline {
     }
 }
 
-ul.list-posts {
+.list-posts {
     list-style: none;
     margin: 0;
     padding: 0;
+    overflow: hidden;
+    border: 2px solid $brand-primary;
+    border-radius: 1em;
 }
 
 .list-post {
@@ -38,9 +41,9 @@ ul.list-posts {
     color: $brand-dark;
     display: flex;
     flex-direction: row;
-    overflow: hidden;
-    border: 2px solid $brand-primary;
     background-color: rgba($brand-primary, 0.05);
+    width: 100%;
+    border-bottom: 2px solid $brand-primary;
 
     &:nth-child(2n+1) {
         background-color: rgba($brand-primary, 0.15);
@@ -51,16 +54,8 @@ ul.list-posts {
         color: $brand-light;
     }
 
-    border-bottom-width: 0;
-    &:first-child {
-        border-top-left-radius: 1em;
-        border-top-right-radius: 1em;
-    }
-
     &:last-child {
-        border-bottom-left-radius: 1em;
-        border-bottom-right-radius: 1em;
-        border-bottom-width: 2px;
+        border-bottom-width: 0;
     }
 
     &__title {
@@ -163,6 +158,7 @@ ul.list-posts {
 }
 
 .button {
+    cursor: pointer;
     display: inline-block;
     margin: 0 4px 4px 0;
     border: 2px solid $brand-primary;
@@ -179,7 +175,8 @@ ul.list-posts {
         vertical-align: middle;
     }
 
-    &:hover {
+    &:hover,
+    &.active {
         background-color: rgba($brand-primary, 0.2);
     }
 }
