--- a/_sass/freshbrewed/_components.scss
+++ b/_sass/freshbrewed/_components.scss
@@ -41,7 +41,8 @@ ul.list-inline {
     color: $brand-dark;
     display: flex;
     flex-direction: row;
-    background-color: rgba($brand-primary, 0.05);
+    background: rgba($brand-primary, 0.05) no-repeat bottom left;
+    background-size: contain;
     width: 100%;
     border-bottom: 2px solid $brand-primary;
 
@@ -73,8 +74,23 @@ ul.list-inline {
         padding: $spacing-unit/2;
     }
 
+    &__thumb {
+        margin: 0;
+        padding: 0;
+        position: absolute;
+        height: 100%;
+        width: 35%;
+        top: 0;
+        right: 0;
+        z-index: -1;
+        background: no-repeat center center;
+        background-size: cover;
+        text-indent: -999em;
+        box-shadow: 2px 0 8px rgba(black, 0.4) inset;
+    }
+
     &__content {
-        width: 85%;
+        width: 65%;
     }
 
     &__tags {
@@ -82,8 +98,10 @@ ul.list-inline {
         margin: 0;
         padding: 0;
         height: 100%;
-        width: 15%;
         margin-left: auto;
+
+        min-width: 85px;
+        width: 12%;
 
         li {
             background-color: rgba($brand-dark, 0.8);
