--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -7,9 +7,15 @@ layout: default
     <h1 class="page-title">{{ page.heading | default: page.title }}</h1>
   </header>
 
+  {% for button in page.buttons %}
+  <a href="{{ button.url }}" class="button">{{ button.text }}</a>
+  {% endfor %}
+
+  {% if page.image %}
   <div>
       <img src="/assets/projects/{{ page.image }}" alt="{{ page.heading }}" />
   </div>
+  {% endif %}
 
   <div class="page-content">
     {{ content }}
