--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -21,4 +21,19 @@ layout: default
     {{ content }}
   </div>
 
+  <div class="post-nav">
+    <div class="post-nav-posts">
+        {% if page.next.url %}
+        <a class="button post-nav__next" href="{{page.next.url}}"><i class="fa fa-chevron-left"></i> {{page.next.title}}</a>
+        {% else %}
+        <a href="/projects/" class="button post-nav__next"><i class="fa fa-chevron-left"></i> Back to Projects</a>
+        {% endif %}
+        {% if page.previous.url %}
+        <a class="button post-nav__prev" href="{{page.previous.url}}">{{page.previous.title}} <i class="fa fa-chevron-right"></i></a>
+        {% else %}
+        <a href="/projects/" class="button post-nav__prev">Back to Projects <i class="fa fa-chevron-right"></i></a>
+        {% endif %}
+    </div>
+  </div>
+
 </article>
