Added portfolio to designs page

--- a/_sass/freshbrewed.scss
+++ b/_sass/freshbrewed.scss
@@ -2,6 +2,8 @@ $brand-primary:    #CB7947 !default;
 $brand-dark:       #362A26 !default;
 $brand-light:      #E2E0D7 !default;
 
+$transition-speed:    200ms;
+
 // Define defaults for each variable
 $base-font-family: "Ubuntu", Helvetica, Arial, sans-serif !default;
 $serif-font-family: "Lora", Georgia, "Times New Roman", serif !default;
