--- a/_sass/freshbrewed/_mixins.scss
+++ b/_sass/freshbrewed/_mixins.scss
@@ -1,3 +1,13 @@
 @mixin font-size($size: $base-font-size) {
     font-size: ($size / $base-font-size) + rem;
 }
+
+
+@mixin fontAwesomeIcon() {
+    display: inline-block;
+    font: normal normal normal 14px/1 FontAwesome;
+    font-size: inherit;
+    text-rendering: auto;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
