--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,14 +1,18 @@
 ---
 layout: default
 ---
-<article class="page">
+<main class="site-content" aria-label="Content">
+  <div class="wrapper">
+      <article class="page">
 
-  <header class="page-header">
-    <h1 class="page-title">{{ page.heading | default: page.title }}</h1>
-  </header>
+        <header class="page-header">
+          <h1 class="page-title">{{ page.heading | default: page.title }}</h1>
+        </header>
 
-  <div class="page-content">
-    {{ content }}
+        <div class="page-content">
+          {{ content }}
+        </div>
+
+      </article>
   </div>
-
-</article>
+</main>
