--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,42 +1,46 @@
 ---
 layout: default
 ---
-<article class="post" itemscope itemtype="http://schema.org/BlogPosting">
+<main class="site-content" aria-label="Content">
+  <div class="wrapper">
+      <article class="post" itemscope itemtype="http://schema.org/BlogPosting">
 
-  <header class="post-header">
-    <h1 class="post-title" itemprop="name headline">{{ page.title | escape }}</h1>
-    <ul class="post-meta">
-        <li><time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">{{ page.date | date: "%b %-d, %Y" }}</time></li>
-        {% if page.author %}
-        <li><span itemprop="author" itemscope itemtype="http://schema.org/Person"><span itemprop="name">{{ page.author }}</span></span>{% endif %}</li>
-        {% for category in page.categories %}
-        <li>{{ category }}</li>
-        {% endfor %}
-    </ul>
-  </header>
+          <header class="post-header">
+              <h1 class="post-title" itemprop="name headline">{{ page.title | escape }}</h1>
+              <ul class="post-meta">
+                  <li><time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">{{ page.date | date: "%b %-d, %Y" }}</time></li>
+                  {% if page.author %}
+                  <li><span itemprop="author" itemscope itemtype="http://schema.org/Person"><span itemprop="name">{{ page.author }}</span></span>{% endif %}</li>
+                  {% for category in page.categories %}
+                  <li>{{ category }}</li>
+                  {% endfor %}
+              </ul>
+          </header>
 
-  <div class="post-content" itemprop="articleBody">
-    {{ content }}
+          <div class="post-content" itemprop="articleBody">
+              {{ content }}
+          </div>
+
+
+          <div class="post-nav">
+              <div class="post-nav-posts">
+                  {% if page.next.url %}
+                  <a class="button post-nav__next" href="{{page.next.url}}"><i class="fa fa-chevron-left"></i> {{page.next.title}}</a>
+                  {% else %}
+                  <a href="/blog/" class="button post-nav__next"><i class="fa fa-chevron-left"></i> Back to Blog</a>
+                  {% endif %}
+                  {% if page.previous.url %}
+                  <a class="button post-nav__prev" href="{{page.previous.url}}">{{page.previous.title}} <i class="fa fa-chevron-right"></i></a>
+                  {% else %}
+                  <a href="/blog/" class="button post-nav__prev">Back to Blog <i class="fa fa-chevron-right"></i></a>
+                  {% endif %}
+              </div>
+          </div>
+
+
+          {% if site.disqus.shortname %}
+          {% include disqus_comments.html %}
+          {% endif %}
+      </article>
   </div>
-
-
-  <div class="post-nav">
-    <div class="post-nav-posts">
-        {% if page.next.url %}
-        <a class="button post-nav__next" href="{{page.next.url}}"><i class="fa fa-chevron-left"></i> {{page.next.title}}</a>
-        {% else %}
-        <a href="/blog/" class="button post-nav__next"><i class="fa fa-chevron-left"></i> Back to Blog</a>        
-        {% endif %}
-        {% if page.previous.url %}
-        <a class="button post-nav__prev" href="{{page.previous.url}}">{{page.previous.title}} <i class="fa fa-chevron-right"></i></a>
-        {% else %}
-        <a href="/blog/" class="button post-nav__prev">Back to Blog <i class="fa fa-chevron-right"></i></a>
-        {% endif %}
-    </div>
-  </div>
-
-
-  {% if site.disqus.shortname %}
-    {% include disqus_comments.html %}
-  {% endif %}
-</article>
+</main>
