--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -1,39 +1,43 @@
 ---
 layout: default
 ---
-<article class="page">
+<main class="site-content" aria-label="Content">
+  <div class="wrapper">
+      <article class="page">
 
-  <header class="page-header">
-    <h1 class="page-title">{{ page.heading | default: page.title }}</h1>
-  </header>
+          <header class="page-header">
+              <h1 class="page-title">{{ page.heading | default: page.title }}</h1>
+          </header>
 
-  {% for button in page.buttons %}
-  <a href="{{ button.url }}" class="button">{{ button.text }}</a>
-  {% endfor %}
+          {% for button in page.buttons %}
+          <a href="{{ button.url }}" class="button">{{ button.text }}</a>
+          {% endfor %}
 
-  {% if page.image %}
-  <div>
-      <img src="/assets/projects/{{ page.image }}" alt="{{ page.heading }}" />
+          {% if page.image %}
+          <div>
+              <img src="/assets/projects/{{ page.image }}" alt="{{ page.heading }}" />
+          </div>
+          {% endif %}
+
+          <div class="page-content">
+              {{ content }}
+          </div>
+
+          <div class="post-nav">
+              <div class="post-nav-posts">
+                  {% if page.next.url %}
+                  <a class="button post-nav__next" href="{{page.next.url}}"><i class="fa fa-chevron-left"></i> {{page.next.title}}</a>
+                  {% else %}
+                  <a href="/projects/" class="button post-nav__next"><i class="fa fa-chevron-left"></i> Back to Projects</a>
+                  {% endif %}
+                  {% if page.previous.url %}
+                  <a class="button post-nav__prev" href="{{page.previous.url}}">{{page.previous.title}} <i class="fa fa-chevron-right"></i></a>
+                  {% else %}
+                  <a href="/projects/" class="button post-nav__prev">Back to Projects <i class="fa fa-chevron-right"></i></a>
+                  {% endif %}
+              </div>
+          </div>
+
+      </article>
   </div>
-  {% endif %}
-
-  <div class="page-content">
-    {{ content }}
-  </div>
-
-  <div class="post-nav">
-    <div class="post-nav-posts">
-        {% if page.next.url %}
-        <a class="button post-nav__next" href="{{page.next.url}}"><i class="fa fa-chevron-left"></i> {{page.next.title}}</a>
-        {% else %}
-        <a href="/projects/" class="button post-nav__next"><i class="fa fa-chevron-left"></i> Back to Projects</a>
-        {% endif %}
-        {% if page.previous.url %}
-        <a class="button post-nav__prev" href="{{page.previous.url}}">{{page.previous.title}} <i class="fa fa-chevron-right"></i></a>
-        {% else %}
-        <a href="/projects/" class="button post-nav__prev">Back to Projects <i class="fa fa-chevron-right"></i></a>
-        {% endif %}
-    </div>
-  </div>
-
-</article>
+</main>
