Added screenshot buttons

--- a/_sass/freshbrewed/components/_designs.scss
+++ b/_sass/freshbrewed/components/_designs.scss
@@ -20,7 +20,7 @@
 
         &:hover,
         &.design--active {
-            background: darken($brand-light, 30%);
+            background: $brand-primary;
 
             img {
                 mix-blend-mode: normal;
