--- a/_includes/designs.html
+++ b/_includes/designs.html
@@ -1,29 +1,105 @@
 <section>
     <div id="design-environment-celebration-institute" class="design-explanation" style="display:none">
         <h2 class="design-explanation__title"><a href="https://www.environmentcelebration.com/">Environment Celebration Institute</a></h2>
+        <a
+            href="/assets/designs/screenshots/environment-celebration-institute-home.png"
+            class="button" target="_blank">
+            Home
+        </a>
+        <a
+            href="/assets/designs/screenshots/environment-celebration-institute-class.png"
+            class="button" target="_blank">
+            Class
+        </a>
+        <a
+            href="/assets/designs/screenshots/environment-celebration-institute-course.png"
+            class="button" target="_blank">
+            Course
+        </a>
+
         <p>Environment Celebration Institute is an environmental education centre headed by leading Soil scientist, Dr. Elaine Ingham. </p>
         <p>We created an E-commerce platform powered by WooCommerce (WordPress) and integrated with our very own Classroom Plugin to allow the purchasing of access to a digital classroom.</p>
     </div>
     <div id="design-epicentre-training" class="design-explanation" style="display:none">
         <h2 class="design-explanation__title"><a href="http://epicentretraining.com/">Epicentre Training</a></h2>
+        <a
+            href="/assets/designs/screenshots/epicentre-training-home.png"
+            class="button" target="_blank">
+            Home
+        </a>
+        <a
+            href="/assets/designs/screenshots/epicentre-training-team.png"
+            class="button" target="_blank">
+            Team
+        </a>
+
         <p>Epicentre Training is Montreal's premiere training centre for strength athletes of all types. </p>
         <p>We re-launched their website with a custom designed WordPress site that integrated with their Mind Body booking account to display a dynamic schedule on the homepage.</p>
     </div>
     <div id="design-ryan-schwartz" class="design-explanation" style="display:none">
         <h2 class="design-explanation__title">Ryan Schwartz</h2>
+        <a
+            href="/assets/designs/screenshots/ryan-schwartz-home.png"
+            class="button" target="_blank">
+            Home
+        </a>
+        <a
+            href="/assets/designs/screenshots/ryan-schwartz-interior.png"
+            class="button" target="_blank">
+            Interior
+        </a>
+
         <p>Ryan Schwartz is a brilliant copywriter looking to expand his personal brand. We produced this custom designed WordPress site to help him bring together his brands.</p>
     </div>
     <div id="design-thai-masssage-toronto" class="design-explanation" style="display:none">
         <h2 class="design-explanation__title"><a href="http://www.thaimassagetoronto.com/">Thai Massage Toronto</a></h2>
+        <a
+            href="/assets/designs/screenshots/thai-massage-toronto-home.png"
+            class="button" target="_blank">
+            Home
+        </a>
+        <a
+            href="/assets/designs/screenshots/thai-massage-toronto-store.png"
+            class="button" target="_blank">
+            Store
+        </a>
+        <a
+            href="/assets/designs/screenshots/thai-massage-toronto-interior.png"
+            class="button" target="_blank">
+            Interior
+        </a>
+
         <p>Thai Massage Toronto is Toronto's leading Thai Massage school and massage centre. We created a custom designed E-Commerce platform powered by WooCommerce (WordPress) with booking functionality for their massage centre.</p>
     </div>
     <div id="design-valhalla-farms" class="design-explanation" style="display:none">
         <h2 class="design-explanation__title"><a href="https://coopfermesvalhalla.com/">Valhalla Farms</a></h2>
+        <a
+            href="/assets/designs/screenshots/valhalla-farms-home.png"
+            class="button" target="_blank">
+            Home
+        </a>
+        <a
+            href="/assets/designs/screenshots/valhalla-farms-interior.png"
+            class="button" target="_blank">
+            Interior
+        </a>
+
         <p>Valhalla Farms is a cooperate farm on the south shore of Montreal with the of sustainable farming and promotion of community values. </p>
         <p>We built this website for them as our way of supporting a beautiful cause. It's a simple database-less Laravel site with localization for French and English. </p>
     </div>
     <div id="design-creative-philanthropy" class="design-explanation" style="display:none">
         <h2 class="design-explanation__title"><a href="http://creative-philanthropy.org/">Creative Philanthropy</a></h2>
+        <a
+            href="/assets/designs/screenshots/creative-philanthropy-home.png"
+            class="button" target="_blank">
+            Home
+        </a>
+        <a
+            href="/assets/designs/screenshots/creative-philanthropy-interior.png"
+            class="button" target="_blank">
+            Interior
+        </a>
+
         <p>Creative Philanthropy offers self-identified Creatives a platform to empower underprivileged children worldwide.</p>
         <p>We built for them this custom static PHP website that includes a Paypal donation form.</p>
     </div>
@@ -38,7 +114,7 @@
             <img src="/assets/designs/thai-masssage-toronto.jpg" alt="Thai Massage Toronto Web Design"></a></li>
         <li><a href="#design-valhalla-farms">
             <img src="/assets/designs/valhalla-farms.jpg" alt="Valhalla Farms Web Design"></a></li>
-        <li><a href="#design-creative-philanthropy.jpg">
+        <li><a href="#design-creative-philanthropy">
             <img src="/assets/designs/creative-philanthropy.jpg" alt="Creative Philanthropy Web Design"></a></li>
     </ul>
 </section>
