Disable turbolinks on web apps page

--- a/_sass/freshbrewed/_layout.scss
+++ b/_sass/freshbrewed/_layout.scss
@@ -8,6 +8,11 @@ body {
     }
 }
 
+.turbolinks-progress-bar {
+  height: 5px;
+  background-color: $brand-primary;
+}
+
 .site-header {
     display: flex;
     flex-direction: column;
