--- a/_includes/webapps.html
+++ b/_includes/webapps.html
@@ -1,3 +1,3 @@
-<pre class="coding">
-    <span id="coding"></span>
-</pre>
+<div class="coding coding--terminal">
+    <div class="coding__inner"><span id="coding" class="coding__text"></span></div>
+</div>
