--- a/_includes/head.html
+++ b/_includes/head.html
@@ -28,7 +28,7 @@ __________                                  .___
        \/       \/    \/                         
 -->
 
-  <title>Fresh Brewed Web – {% if page.title %}{{ page.title | escape }}{% else %}{{ site.title | escape }}{% endif %}</title>
+  <title>{% if page.title %}{{ page.title | escape }} - Fresh Brewed Web{% else %}Fresh Brewed Web{% endif %}</title>
   <meta name="description" content="{{ page.description | default: page.excerpt | strip_html | normalize_whitespace | truncate: 160 | escape }}">
 
   {% include social-graph.html %}
