--- a/_includes/designs.html
+++ b/_includes/designs.html
@@ -84,7 +84,7 @@
             Interior
         </a>
 
-        <p>Valhalla Farms is a cooperate farm on the south shore of Montreal with the of sustainable farming and promotion of community values. </p>
+        <p>Valhalla Farms is a cooperative farm on the south shore of Montreal with the of sustainable farming and promotion of community values. </p>
         <p>We built this website for them as our way of supporting a beautiful cause. It's a simple database-less Laravel site with localization for French and English. </p>
     </div>
     <div id="design-creative-philanthropy" class="design-explanation" style="display:none">
