Fixed some mobile quirks

--- a/_sass/freshbrewed/_components.scss
+++ b/_sass/freshbrewed/_components.scss
@@ -1,203 +1,6 @@
+@import "components/button";
 @import "components/designs";
 @import "components/coding";
-
-.pill {
-    display: inline-block;
-    padding: 0.5em 1em;
-    border-radius: 99em;
-    background-color: $brand-dark;
-    color: $brand-light;
-    text-transform: uppercase;
-
-    &--sm {
-        font-size: 0.75em;
-    }
-
-    &:hover {
-        background-color: $brand-primary;
-    }
-}
-
-ul.list-inline {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-
-    li {
-        display: inline-block;
-        margin-right: 1em;
-    }
-}
-
-.list-posts {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    border: 2px solid $brand-primary;
-    border-radius: 1em;
-}
-
-.list-post {
-    margin: 0;
-    position: relative;
-    color: $brand-dark;
-    display: flex;
-    flex-direction: row;
-    background: rgba($brand-primary, 0.05) no-repeat bottom left;
-    background-size: contain;
-    width: 100%;
-    border-bottom: 2px solid $brand-primary;
-
-    &:nth-child(2n+1) {
-        background-color: rgba($brand-primary, 0.15);
-    }
-
-    &:hover {
-        background-color: $brand-primary;
-        color: $brand-light;
-    }
-
-    &:last-child {
-        border-bottom-width: 0;
-    }
-
-    &__title {
-        @include font-size(16px);
-        text-transform: uppercase;
-        padding: $spacing-unit/2;
-        font-weight: 700;
-        padding-bottom: 0;
-        margin: 0;
-    }
-
-    &__desc {
-        @include font-size();
-        margin: 0;
-        padding: $spacing-unit/2;
-    }
-
-    &__thumb {
-        margin: 0;
-        padding: 0;
-        position: absolute;
-        height: 100%;
-        width: 35%;
-        top: 0;
-        right: 0;
-        z-index: -1;
-        background: no-repeat center center;
-        background-size: cover;
-        text-indent: -999em;
-        box-shadow: 2px 0 8px rgba(black, 0.4) inset;
-    }
-
-    &__content {
-        width: 65%;
-    }
-
-    &__tags {
-        list-style: none;
-        margin: 0;
-        padding: 0;
-        height: 100%;
-        margin-left: auto;
-
-        min-width: 85px;
-        width: 12%;
-
-        li {
-            background-color: rgba($brand-dark, 0.8);
-            font-weight: 300;
-            color: $brand-light;
-            font-size: 0.75em;
-            margin-top: 0;
-            margin-bottom: 2px;
-            padding: 4px;
-            text-align: right;
-
-            &:last-child {
-                border-bottom-left-radius: 3px;
-            }
-        }
-    }
-}
-
-.team {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-
-    li {
-        display: inline-block;
-        margin: 0 $spacing-unit $spacing-unit 0;
-    }
-
-}
-
-.team-member {
-    display: inline-block;
-    width: 12rem;
-    height: 12rem;
-    border-radius: 50%;
-    overflow: hidden;
-    position: relative;
-    border: 3px solid #fff;
-    box-shadow: 0 3px 3px rgba(0,0,0,0.5);
-    img {
-        display: block;
-        width: 100%;
-        height: auto;
-    }
-
-    &__info {
-        top: 0;
-        left: 0;
-        position: absolute;
-        width: 100%;
-        height: 100%;
-        padding: $spacing-unit/2;
-        box-sizing: border-box;
-        display: flex;
-        flex-direction: column;
-        justify-content: flex-end;
-        align-items: center;
-        color: $brand-light;
-        background-image: linear-gradient(transparent, transparent 50%, rgba(0,0,0,0.85));
-    }
-
-    &__name {
-        margin: 0;
-        @include font-size(16px);
-    }
-
-    &__title {
-        margin: 0;
-        font-size: 0.75em;
-        font-weight: 400;
-    }
-}
-
-.button {
-    cursor: pointer;
-    display: inline-block;
-    margin: 0 4px 4px 0;
-    border: 2px solid $brand-primary;
-    border-radius: 4px;
-    font-family: $base-font-family;
-    padding: 0.4em 0.8em;
-    text-transform: uppercase;
-    font-weight: 700;
-    white-space: nowrap;
-    @include font-size(11px);
-
-    i {
-        font-size: 1.25em;
-        vertical-align: middle;
-    }
-
-    &:hover,
-    &.active {
-        background-color: rgba($brand-primary, 0.2);
-    }
-}
+@import "components/lists";
+@import "components/list-posts";
+@import "components/team";
