--- a/_sass/freshbrewed/components/_coding.scss
+++ b/_sass/freshbrewed/components/_coding.scss
@@ -1,7 +1,7 @@
 .coding {
+    white-space: pre-wrap;    
     font-family: "Courier New", Courier, "Lucida Sans Typewriter", "Lucida Typewriter", monospace;
     letter-spacing: 0.05em;
-    white-space: pre;
     background: rgba(#1a1604, 0.9);
     color: #c7c2af;
     padding: 0 $spacing-unit*2;
