--- a/_sass/freshbrewed/components/_designs.scss
+++ b/_sass/freshbrewed/components/_designs.scss
@@ -39,7 +39,7 @@
 .design-explanation {
     background: $brand-dark;
     color: $brand-light;
-    padding: $spacing-unit ( $spacing-unit * 2 );
+    padding: $spacing-unit * 2;
 
     &__title {
         margin-top: 0;
