--- a/_sass/freshbrewed/_layout.scss
+++ b/_sass/freshbrewed/_layout.scss
@@ -230,8 +230,22 @@ body {
 
 .post-nav {
     overflow: hidden;
-    &__prev {
-        float: right;
+    text-align: center;
+
+    .button {
+        width: 100%;
+    }
+
+    @media( min-width: $on-palm ) {
+        text-align: left;
+
+        .button {
+            width: auto;
+        }
+
+        &__prev {
+            float: right;
+        }
     }
 }
 
