--- a/_includes/header.html
+++ b/_includes/header.html
@@ -24,7 +24,7 @@
             <source src="/assets/coffee-steaming.webm" type="video/webm">
             <source src="/assets/coffee-steaming.mp4" type="video/mp4">
         </video>
-        <p>Now accepting new projects!</p>
+        <p><del>Now accepting new projects!</del></p>
     </div>
 
 </header>
